# Image_processor

./: CMakeLists.txt  image_processor  main.cpp  readme.md
src/: CMakeLists.txt
src/args/: CMakeLists.txt  args.cpp  args.h
src/bmp/: CMakeLists.txt  dumper.cpp  dumper.h  loader.cpp  loader.h
src/filters/: CMakeLists.txt  affine_tile.cpp  affine_tile.h  blur.cpp  blur.h  crop.cpp  crop.h  edge.cpp  edge.h  filter.h  grayscale.cpp  grayscale.h  matrix_filter.cpp  matrix_filter.h  neg.cpp  neg.h  registry.cpp  registry.h  sharpen.cpp  sharpen.h
src/image/: CMakeLists.txt  color.h  format.h  image.cpp  image.h
tests/: CMakeLists.txt  test_affine_tile.cpp  test_args.cpp  test_blur.cpp  test_crop.cpp  test_dumper.cpp  test_edge.cpp  test_grayscale.cpp  test_loader.cpp  test_neg.cpp  test_sharpen.cpp
